[tool.poetry]
name = "milmi"
version = "0.1.0"
description = "Cleans, standardizes and loads the MILMI dataset we receive from the state (or painstakingly download)."
authors = ["mikevatd3 <mike@datadrivendetroit.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.31"
tomli = "^2.0.1"
geopandas = "^1.0.1"
returns = "^0.23.0"
geoalchemy2 = "^0.15.2"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
tabulate = "^0.9.0"
pandera = "^0.22.0"
click = "^8.1.8"
metadata-audit = {git = "https://github.com/mikevatd3/metadata_audit.git"}
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
